Fixed bug where table didn't have border or alignment on edit users page

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -182,6 +182,12 @@ a:visited, a:hover, a:link, a:active {
 	display: inline;
 }
 
+#main {
+    border: 1px solid black;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /** Footer */
 #credits {
     font-size: .75em;
